# kiss_rng

./: .gitignore  .gitmodules  CMakeLists.txt  Makefile  example.cu
include/: hashers.cuh  kiss_rng.cuh
include/kiss_rng/: hashers.cuh  kiss_rng.cuh
